--- a/src/styles.css
+++ b/src/styles.css
@@ -1,24 +1,58 @@
 html, body {
   background: rgba(16,20,28, 1);
   color: white;
+  position: relative;
 }
 
-form {
+#form, .container-task {
+  border-radius: 4px;
+  overflow: hidden;
+}
+
+#form {
+  padding: 20px;
+  inset: 50% 0px;
+  height: fit-content;
+  position: absolute;
+  margin: auto;
+  background: rgba(16,20,28, 1);
+  border: 1px solid rgba(255,255, 240, 0.3);
+  max-width: calc(100% - 32px);
+  max-height: 90%;
+  box-sizing: border-box;
+
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   justify-content: center;
-  padding: 20px;
-
-  border: 1px solid rgba(255,255, 240, 0.3);
 }
-
+#measurements {
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+.overlay {
+  position: fixed;
+  inset: 0px;
+  z-index: 10;
+  backdrop-filter: blur(2px);
+  visibility: hidden;
+  display: none;
+}
+.active {
+  visibility: visible;
+  display: initial;
+}
+.close::after {
+  cursor: pointer;
+  position: absolute;
+  content: 'x';
+  font-size: 30px;
+  font-weight: 200;
+  font-family: sans-serif;
+  top: 10px;
+  right: 20px;
+}
 h4 {
   margin: 0;
-}
-
-h1 {
-  margin-left: 20px;
 }
 
 .form-group {
@@ -82,8 +116,53 @@ input, select {
   grid-column-gap: 10px;
 }
 
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 1rem;
+}
+.header button {
+  height: 100%;
+}
+.container-task {
+  border: 1px solid rgba(255,255, 240, 0.3);
+}
+.container-task header h4, .task p {
+  font-size: 14px;
+  font-weight: normal;
+}
+.container-task header, .task {
+  display: grid;
+  text-align: center;
+  grid-template-columns: repeat(4, 1fr);
+}
+.task p:nth-of-type(4), .container-task header h4:nth-of-type(4), .task p:nth-of-type(5), .container-task header h4:nth-of-type(5) {
+  display: none;
+}
+.container-task header {
+  background-color: rgb(12, 12, 12);
+}
+.task:nth-of-type(odd) {
+  background-color: rgba(128, 128, 128, 0.1);
+}
+.task-btn {
+  margin: auto 0;
+}
+.task p {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+}
+
+
 
 @media screen and (min-width: 350px) {
+  .container-task header h4, .task p {
+    font-size: initial;
+    font-weight: bold;
+  }
   .buttons {
     align-self: flex-end;
   }
@@ -96,8 +175,26 @@ input, select {
   }
 }
 
+@media screen and (min-width: 470px) {
+  .container-task header, .task {
+    grid-template-columns: repeat(5, 1fr);
+  }
+  .task p:nth-of-type(5), .container-task header h4:nth-of-type(5) {
+    display: initial;
+  }
+}
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 768px) {
+  .container-task header, .task {
+    grid-template-columns: repeat(6, 1fr);
+  }
+  .task p:nth-of-type(4), .container-task header h4:nth-of-type(4) {
+    display: initial;
+  }
+}
+
+
+@media screen and (min-width: 1024px) {
   #measurements {
     grid-template-columns: repeat(3, 1fr);
   }
